samples/buildpack-bits-with-route.yml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: buildpack-bits-example
  namespace: default
spec:
  traffic:
  - configurationName: buildpack-bits-example
    percent: 100
